--- a/Appcamp_Frontend/Appcamp_Frontend.csproj
+++ b/Appcamp_Frontend/Appcamp_Frontend.csproj
@@ -127,6 +127,7 @@
     <None Include="Appcamp_Frontend_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\bg.png" />
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\SmallLogo.png" />
     <Content Include="Assets\SplashScreen.png" />
